Revert "Updated builder"
This reverts commit e493a89ec0d5d9e98d4872acf864e2356e7bf64d.

--- a/.atom-build.yml
+++ b/.atom-build.yml
@@ -11,5 +11,6 @@ warningMatch:
 
 targets:
    Release:
-      cmd: "sh .scripts/build.sh"
+      cmd: ".scripts/build.sh"
       name: "RCLC_Classic:Release"
+      sh: false
