Switched RCLC branch to v2.x

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "RCLootCouncil2"]
 	path = RCLootCouncil
 	url = https://github.com/evil-morfar/RCLootCouncil2
-	branch = develop
+	branch = v2.x
