--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,7 +22,7 @@
         {
             "label": "Build and Release",
             "type": "shell",
-            "command": "sh .scripts/build.sh",
+            "command": ".scripts\\build.sh",
         },
         {
             "label": "Busted All",
