Busted updates. Set "RCLootCouncil" to be the default directory in busted. This allows all files in RCLootCouncil to be run.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -40,8 +40,18 @@
             "type": "shell",
             "command": "busted",
             "args": [
-                "${file}"
+                "--lpath=${workspaceFolder}/RCLootCouncil/__tests/?.lua",
+                "-v",
+                "${file}",
             ],
+            "windows": {
+                "args": [
+                    "--lpath=${workspaceFolder}\\RCLootCouncil\\__tests\\?.lua",
+                    "-C=./RCLootCouncil",
+                    "-v",
+                    "${file}",
+                ],
+            },
             "group": "test"
         },
         {
