--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "label": "Deploy both",
             "dependsOn": [
                 "Deploy Classic",
-                "Deploy TBC"
+                "Deploy Cataclysm"
             ],
             "dependsOrder": "parallel",
             "problemMatcher": []
@@ -22,12 +22,20 @@
             ]
         },
         {
-            "label": "Deploy TBC",
+            "label": "Deploy Cataclysm",
             "type": "shell",
             "command": "sh",
             "args": [
                 ".scripts/deploy.sh",
                 "-b"
+            ]
+        }, {
+            "label": "Deploy Cata PTR",
+            "type": "shell",
+            "command": "sh",
+            "args": [
+                ".scripts/deploy.sh",
+                "-bp"
             ]
         },
         {
