--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,24 @@
     "Lua.workspace.library": [
         "${workspace}/../RCLootCouncil",
         "${3rd}/lfs/library",
-        "${userHome}\\.vscode\\extensions\\ketho.wow-api-0.9.14\\EmmyLua\\API",
-        "${userHome}\\.vscode\\extensions\\ketho.wow-api-0.9.14\\EmmyLua\\Optional",
         "${userHome}/AppData/Roaming/Code/User/globalStorage/sumneko.lua/addonManager/addons/busted/module/library",
-        "${3rd}/luassert/library"
+        "${3rd}/luassert/library",
+        "~\\.vscode\\extensions\\ketho.wow-api-0.17.4\\Annotations"
     ],
-    "Lua.workspace.checkThirdParty": false
+    "Lua.workspace.checkThirdParty": false,
+    "Lua.runtime.version": "Lua 5.1",
+    "Lua.runtime.builtin": {
+        "basic": "disable",
+        "debug": "disable",
+        "io": "disable",
+        "math": "disable",
+        "os": "disable",
+        "package": "disable",
+        "string": "disable",
+        "table": "disable",
+        "utf8": "disable"
+    },
+    "Lua.diagnostics.globals": [
+        "lfs"
+    ]
 }
