--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,16 +15,12 @@ jobs:
     steps:
       - name: Clone project
         uses: actions/checkout@v3
+        with:
+          submodules: true
 
       - name: Create changelog
         # Grabs everything under the top level # header and outputs to a new file
         run: sed -n "1p; 2,/^# / {/^# /d; p}" Changelog.md > Changes.md
-      
+
       - name: Package and Release
         run: bash .scripts/build.sh
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: RCLootCouncil_Classic
-          path: RCLootCouncil_Classic-*.zip
