--- a/.github/workflows/discordChangelog.yml
+++ b/.github/workflows/discordChangelog.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Github Releases To Discord
-        uses: SethCohen/github-releases-to-discord@v1
+        uses: SethCohen/github-releases-to-discord
         with:
           webhook_url: ${{ secrets.DISCORD_CHANGELOG_WEBHOOK_URL }}
           username: "Github"
