--- a/.github/workflows/discordChangelog.yml
+++ b/.github/workflows/discordChangelog.yml
@@ -1,3 +1,4 @@
+name: Discord Changelog
 on:
   release:
     types: [published]
@@ -9,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Github Releases To Discord
-        uses: SethCohen/github-releases-to-discord
+        uses: SethCohen/github-releases-to-discord@master
         with:
           webhook_url: ${{ secrets.DISCORD_CHANGELOG_WEBHOOK_URL }}
           username: "Github"
