--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,85 @@
 {
     "todo-tree.tree.showCountsInTree": false,
     "Lua.runtime.path": [
-        "${workspace}\\RCLootCouncil\\__tests\\?.lua"
-    ]
+        "${workspace}\\RCLootCouncil\\__tests\\?.lua",
+        "${workspace}\\RCLootCouncil\\?.lua",
+    ],
+    "Lua.diagnostics.globals": [
+        "lfs",
+        "FindInTableIf",
+        "CopyTable",
+        "Item",
+        "tContains",
+        "CLASS_SORT_ORDER",
+        "tInvert",
+        "tDeleteItem",
+        "RANDOM_ROLL_RESULT",
+        "BackdropTemplateMixin",
+        "GameTooltip",
+        "HandleModifiedItemClick",
+        "FauxScrollFrame_OnVerticalScroll",
+        "GameTooltip_AddColoredDoubleLine",
+        "GameTooltip_AddBlankLineToTooltip",
+        "GameTooltip_AddColoredLine",
+        "UIParent",
+        "getglobal",
+        "REQUEST_ROLL",
+        "BACKPACK_CONTAINER",
+        "NUM_BAG_SLOTS",
+        "GUILD_BANK_LOG_TIME",
+        "escapePatternSymbols",
+        "ChatFrame_AddMessageEventFilter",
+        "ReloadUI",
+        "INVSLOT_LAST_EQUIPPED",
+        "RAID_CLASS_COLORS",
+        "Settings",
+        "SettingsPanel",
+        "CLASS_ICON_TCOORDS",
+        "FindValueInTableIf",
+        "BIND_TRADE_TIME_REMAINING",
+        "RELIC_TOOLTIP_TYPE",
+        "ITEM_BNETACCOUNTBOUND",
+        "PLAYER_LIST_DELIMITER",
+        "ITEM_SOULBOUND",
+        "ITEM_ACCOUNTBOUND",
+        "LIST_DELIMITER",
+        "INT_SPELL_DURATION_SEC",
+        "INT_SPELL_DURATION_HOURS",
+        "TIME_UNIT_DELIMITER",
+        "INT_SPELL_DURATION_MIN",
+        "ChatFrame1",
+        "SECOND_ONELETTER_ABBR",
+        "LOCALE_enGB",
+        "SECONDS_ABBR",
+        "ConvertSecondsToUnits",
+        "ITEM_QUALITY_COLORS",
+        "ALL_CLASSES",
+        "ITEM_MOD_STRENGTH_SHORT",
+        "MELEE",
+        "ITEM_MOD_AGILITY_SHORT",
+        "ITEM_MOD_INTELLECT_SHORT",
+        "TANK",
+        "HEALER",
+        "DAMAGER",
+        "BLOCK",
+        "PARRY",
+        "RANGED",
+        "GetUnitName",
+        "INVSLOT_BODY",
+        "INVSLOT_TABARD",
+        "Add",
+        "AccumulateOp",
+        "Clamp",
+        "CreateSimpleTextureMarkup",
+        "ITEM_ACCOUNTBOUND_UNTIL_EQUIP"
+    ],
+    "Lua.workspace.library": [
+        "~\\.vscode\\extensions\\ketho.wow-api-0.20.6\\Annotations\\Core",
+        "${addons}/busted/module/library",
+        "${3rd}/luassert/library",
+        "${addons}/lldebugger/module/library",
+        "${addons}/luassert/module/library",
+        "${addons}/luafilesystem/module/library",
+    ],
+    "Lua.workspace.checkThirdParty": false
 }
