--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -37,12 +37,16 @@
             "windows": {
                 "args": [
                     "--lpath=${workspaceFolder}\\RCLootCouncil\\__tests\\?.lua",
-                    "--helper=${workspaceFolder}\\.specs\\ClassicEnvironment.lua"
+                    "--helper=${workspaceFolder}\\.specs\\ClassicEnvironment.lua",
+                    "-C=${workspaceFolder}\\RCLootCouncil",
+                    "-f=${workspaceFolder}\\.busted"
                 ]
             },
             "args": [
                 "--lpath=${workspaceFolder}/RCLootCouncil/__tests/?.lua",
-                "--helper=${workspaceFolder}/.specs/ClassicEnvironment.lua"
+                "--helper=${workspaceFolder}/.specs/ClassicEnvironment.lua",
+                "-C=${workspaceFolder}\\RCLootCouncil",
+                "-f=${workspaceFolder}\\.busted"
             ]
         },
         {
@@ -52,6 +56,8 @@
             "args": [
                 "--lpath=${workspaceFolder}/RCLootCouncil/__tests/?.lua",
                 "--helper=${workspaceFolder}/.specs/ClassicEnvironment.lua",
+                "-C=${workspaceFolder}\\RCLootCouncil",
+                "-f=${workspaceFolder}\\.busted",
                 "-v",
                 "${file}",
             ],
@@ -59,6 +65,8 @@
                 "args": [
                     "--lpath=${workspaceFolder}\\RCLootCouncil\\__tests\\?.lua",
                     "--helper=${workspaceFolder}\\.specs\\ClassicEnvironment.lua",
+                    "-C=${workspaceFolder}\\RCLootCouncil",
+                    "-f=${workspaceFolder}\\.busted",
                     "-v",
                     "${file}",
                 ],
