--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,14 +87,5 @@
         "CreateAtlasMarkup",
         "class"
     ],
-    "Lua.workspace.checkThirdParty": false,
-    "Lua.workspace.library": [
-        "~\\.vscode\\extensions\\ketho.wow-api-0.20.7\\Annotations\\Core",
-        "~\\.vscode\\extensions\\ketho.wow-api-0.20.7\\Annotations\\FrameXML",
-        "${addons}/busted/module/library",
-        "${3rd}/luassert/library",
-        "${addons}/lldebugger/module/library",
-        "${addons}/luafilesystem/module/library",
-        "${addons}/luassert/module/library",
-    ]
+    "Lua.workspace.checkThirdParty": false
 }
