--- a/.github/workflows/discordChangelog.yml
+++ b/.github/workflows/discordChangelog.yml
@@ -1,7 +1,10 @@
 name: Discord Changelog
+
 on:
   release:
     types: [published]
+
+  workflow_call:
 
 jobs:
   github-releases-to-discord:
@@ -9,6 +12,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Github Releases To Discord
         uses: SethCohen/github-releases-to-discord@master
         with:
