--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "${3rd}/lfs/library",
         "${userHome}/AppData/Roaming/Code/User/globalStorage/sumneko.lua/addonManager/addons/busted/module/library",
         "${3rd}/luassert/library",
-        "~\\.vscode\\extensions\\ketho.wow-api-0.20.8\\Annotations\\Core"
+        "~\\.vscode\\extensions\\ketho.wow-api-0.20.8\\Annotations\\Core",
+        "~\\.vscode\\extensions\\ketho.wow-api-0.20.8\\Annotations\\FrameXML"
     ],
     "Lua.runtime.version": "Lua 5.1",
     "Lua.runtime.builtin": {
