--- a/.github/workflows/discordChangelog.yml
+++ b/.github/workflows/discordChangelog.yml
@@ -4,7 +4,11 @@ on:
   release:
     types: [published]
 
-  workflow_call:
+  # workflow_call:
+  #   secrets:
+  #     WEBHOOK_URL:
+  #       description: "Discord webhook URL to post the changelog to"
+  #       required: true
 
 jobs:
   github-releases-to-discord:
