Only update voting frame sessions that we're viewing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -168,14 +168,15 @@
     "Lua.hint.setType": false,
     "Lua.workspace.checkThirdParty": false,
     "Lua.runtime.builtin": {
-        "basic": "enable",
-        "io": "enable",
-        "debug": "enable",
-        "math": "enable",
-        "os": "enable",
-        "package": "enable",
-        "string": "enable",
-        "table": "enable",
-        "utf8": "enable"
-    }
+        "basic": "disable",
+        "debug": "disable",
+        "io": "disable",
+        "math": "disable",
+        "os": "disable",
+        "package": "disable",
+        "string": "disable",
+        "table": "disable",
+        "utf8": "disable"
+    },
+    "Lua.type.weakUnionCheck": true
 }
