Fix warrior ranged weapon autopass

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -157,7 +157,8 @@
         "CALENDAR_STATUS_INVITED",
         "CALENDAR_STATUS_SIGNEDUP",
         "CALENDAR_STATUS_NOT_SIGNEDUP",
-        "CALENDAR_STATUS_TENTATIVE"
+        "CALENDAR_STATUS_TENTATIVE",
+        "CLOSE"
     ],
     "Lua.diagnostics.disable": [
         "assign-type-mismatch"
