Fix taint issue leading to errors in dropdownmenu Copy Character Name

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -158,7 +158,8 @@
         "CALENDAR_STATUS_SIGNEDUP",
         "CALENDAR_STATUS_NOT_SIGNEDUP",
         "CALENDAR_STATUS_TENTATIVE",
-        "CLOSE"
+        "CLOSE",
+        "ADDONS"
     ],
     "Lua.diagnostics.disable": [
         "assign-type-mismatch"
