--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -159,7 +159,11 @@
         "CALENDAR_STATUS_NOT_SIGNEDUP",
         "CALENDAR_STATUS_TENTATIVE",
         "CLOSE",
-        "ADDONS"
+        "ADDONS",
+        "LE_EXPANSION_LEVEL_CURRENT",
+        "LE_EXPANSION_WRATH_OF_THE_LICH_KING",
+        "LE_EXPANSION_CATACLYSM",
+        "LE_EXPANSION_MISTS_OF_PANDARIA"
     ],
     "Lua.diagnostics.disable": [
         "assign-type-mismatch"
